WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27665
Failed assertion in WorkerContext::~WorkerContext()
https://bugs.webkit.org/show_bug.cgi?id=27665
Summary
Failed assertion in WorkerContext::~WorkerContext()
Andrew Wilson
Reported
2009-07-24 13:58:35 PDT
There's a race condition when WorkerContext shuts down, because the WorkerThread object can get freed before the WorkerContext constructor finishes executing. We need to update the code to make sure we don't access the m_thread after calling workerContextDestroyed() because the pointer may not be valid.
Attachments
Fix for flaky tests
(2.03 KB, patch)
2009-07-24 14:21 PDT
,
Andrew Wilson
levin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrew Wilson
Comment 1
2009-07-24 14:21:47 PDT
Created
attachment 33472
[details]
Fix for flaky tests Worker tests are slightly flaky after my earlier patch - this addresses that problem.
Dmitry Titov
Comment 2
2009-07-24 14:32:32 PDT
Landed:
http://trac.webkit.org/changeset/46376
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug