2009-07-24  Drew Wilson  <atwilson@google.com>

Reviewed by David Levin.

        Changed WorkerContext destructor to not access possibly-freed WorkerThread.

        Failed assertion in WorkerContext::~WorkerContext().
        https://bugs.webkit.org/show_bug.cgi?id=27665

       * workers/DedicatedWorkerContext.cpp:
        (WebCore::DedicatedWorkerContext::~DedicatedWorkerContext):
        * workers/WorkerContext.cpp:
        (WebCore::WorkerContext::~WorkerContext):
        Removed assertion that relies on WorkerThread still being alive (moved to DedicatedWorkerContext destructor).

Canonical link: https://commits.webkit.org/37986@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46376 268f45cc-cd09-0410-ab3c-d52691b4dbfc