WebCore/workers/DedicatedWorkerContext.cpp
@@ -48,7 +48,8 @@ DedicatedWorkerContext::DedicatedWorkerContext(const KURL& url, const String& us
 
 DedicatedWorkerContext::~DedicatedWorkerContext()
 {
-    // Notify parent worker we are going away.
+    ASSERT(currentThread() == thread()->threadID());
+    // Notify parent worker we are going away. This can free the WorkerThread object, so do not access it after this.
     thread()->workerObjectProxy().workerContextDestroyed();
 }
 
